crates/crb-webui-backend/src/snapshots/crb_webui__auth__tests__build_oauth_client_unsupported_provider-2.snap
---
source: crates/crb-webui-backend/src/auth.rs
expression: "result.unwrap_err().contains(\"Unsupported\")"
---
true
