crates/crb-webui-backend/src/snapshots/crb_webui__auth__tests__extract_session_cookie_valid.snap
---
source: crates/crb-webui-backend/src/auth.rs
expression: extract_session_cookie(&headers)
---
Some(
    "abc123",
)
