crates/crb-webui-backend/src/snapshots/crb_webui__auth__tests__random_string_alphanumeric.snap
---
source: crates/crb-webui-backend/src/auth.rs
expression: s.chars().all(|c| c.is_ascii_alphanumeric())
---
true
